--- a/styles.css
+++ b/styles.css
@@ -324,7 +324,16 @@
     @media (min-width: 75em) {
       .t-center-mobile {
         text-align: left; } }
-  
+        .bg-overlay2 {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background-color: rgba(3, 62, 66, 0.9) }
+            .bg-overlay__main-color {
+              background-color: rgba(3, 62, 66, 0.9); }
+           
   .bg-overlay {
     position: absolute;
     width: 100%;
@@ -478,7 +487,7 @@
     padding-top: 5rem !important; }
     @media (min-width: 23.88em) {
       .slideshow-main {
-        height: 95vh; } }
+        height: 94vh; } }
     @media (min-width: 75em) {
       .slideshow-main {
         background-image: url("/images/slideshow.jpg"); } }
@@ -515,8 +524,7 @@
           font-size: 4.5rem;
           padding-top: 0rem;
           line-height: 1.2;
-          padding-bottom: 0rem;
-          color: #000D0E; } }
+          padding-bottom: 0rem; } }
     .slideshow__desc {
       font-size: 1.6rem;
       font-weight: normal !important;
@@ -533,7 +541,6 @@
       @media (min-width: 75em) {
         .slideshow__desc {
           font-size: 2rem;
-          color: #000D0E;
           padding-top: 2rem; } }
     .slideshow__bar {
       background: linear-gradient(-45deg, #166C4D, #EEF7F8, #166C4D, #FEE300);
@@ -1243,10 +1250,11 @@
   
   .navbar ul {
     list-style: none;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    display: flex;
     justify-self: end; }
-  
+    .navbar ul li{
+        padding:0 1rem;
+    }
   .nav-item {
     color: #000D0E;
     font-size: 1.3rem;
